// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column renders correctly 1`] = `
<View
  size={null}
  style={
    Array [
      undefined,
      Object {
        "flexDirection": "column",
      },
      Object {
        "flex": 1,
      },
    ]
  }
  styles={
    Object {
      "base": Object {
        "flexDirection": "column",
      },
    }
  }
  theme={
    Object {
      "colors": Object {
        "layout": Object {
          "backgroundColor": "#ffffff",
        },
        "palette": Object {
          "danger": "#ff4136",
          "dark": "#484848",
          "disabled": "#999999",
          "info": "#75caeb",
          "light": "#f6f6f6",
          "primary": "#158cba",
          "success": "#28b62c",
          "warning": "#ff851b",
        },
        "social": Object {
          "facebook": "#3b5998",
          "google": "#dc4e41",
          "instagram": "#c32aa3",
          "linkedin": "#0077b5",
          "twitter": "#55acee",
          "vk": "#4c75a3",
        },
        "text": Object {
          "disabled": "#999999",
          "placeholder": "#e2e4e6",
          "primary": "#3d3d3d",
          "secondary": "#9e9e9e",
        },
      },
      "components": Object {},
      "radiuses": Object {
        "gigantic": 16,
        "huge": 12,
        "large": 8,
        "medium": 6,
        "small": 4,
        "tiny": 2,
      },
      "spacing": Object {
        "gigantic": 24,
        "huge": 20,
        "large": 16,
        "medium": 12,
        "small": 8,
        "tiny": 4,
      },
      "typography": Object {
        "fontFamily": "System",
        "fontSizes": Object {
          "large": 16,
          "medium": 14,
          "small": 12,
        },
        "fontWeights": Object {
          "bold": "900",
          "medium": "800",
          "normal": "600",
        },
        "iconSet": "MaterialIcons",
        "sizes": Object {
          "h1": Object {
            "fontSize": 31,
            "fontWeight": "900",
          },
          "h2": Object {
            "fontSize": 25,
            "fontWeight": "900",
          },
          "h3": Object {
            "fontSize": 19,
            "fontWeight": "800",
          },
          "h4": Object {
            "fontSize": 17,
            "fontWeight": "800",
          },
          "h5": Object {
            "fontSize": 16,
            "fontWeight": "800",
          },
          "h6": Object {
            "fontSize": 15,
            "fontWeight": "700",
          },
          "normal": Object {
            "fontSize": 14,
            "fontWeight": "700",
          },
          "small": Object {
            "fontSize": 12,
          },
        },
      },
    }
  }
/>
`;

exports[`Grid with Column renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "flexShrink": 1,
      },
      Object {
        "flexDirection": "row",
      },
    ]
  }
  styles={
    Object {
      "base": Object {
        "flexShrink": 1,
      },
      "directions": Object {
        "column": Object {
          "flexDirection": "column",
        },
        "row": Object {
          "flexDirection": "row",
        },
      },
    }
  }
  theme={
    Object {
      "colors": Object {
        "layout": Object {
          "backgroundColor": "#ffffff",
        },
        "palette": Object {
          "danger": "#ff4136",
          "dark": "#484848",
          "disabled": "#999999",
          "info": "#75caeb",
          "light": "#f6f6f6",
          "primary": "#158cba",
          "success": "#28b62c",
          "warning": "#ff851b",
        },
        "social": Object {
          "facebook": "#3b5998",
          "google": "#dc4e41",
          "instagram": "#c32aa3",
          "linkedin": "#0077b5",
          "twitter": "#55acee",
          "vk": "#4c75a3",
        },
        "text": Object {
          "disabled": "#999999",
          "placeholder": "#e2e4e6",
          "primary": "#3d3d3d",
          "secondary": "#9e9e9e",
        },
      },
      "components": Object {},
      "radiuses": Object {
        "gigantic": 16,
        "huge": 12,
        "large": 8,
        "medium": 6,
        "small": 4,
        "tiny": 2,
      },
      "spacing": Object {
        "gigantic": 24,
        "huge": 20,
        "large": 16,
        "medium": 12,
        "small": 8,
        "tiny": 4,
      },
      "typography": Object {
        "fontFamily": "System",
        "fontSizes": Object {
          "large": 16,
          "medium": 14,
          "small": 12,
        },
        "fontWeights": Object {
          "bold": "900",
          "medium": "800",
          "normal": "600",
        },
        "iconSet": "MaterialIcons",
        "sizes": Object {
          "h1": Object {
            "fontSize": 31,
            "fontWeight": "900",
          },
          "h2": Object {
            "fontSize": 25,
            "fontWeight": "900",
          },
          "h3": Object {
            "fontSize": 19,
            "fontWeight": "800",
          },
          "h4": Object {
            "fontSize": 17,
            "fontWeight": "800",
          },
          "h5": Object {
            "fontSize": 16,
            "fontWeight": "800",
          },
          "h6": Object {
            "fontSize": 15,
            "fontWeight": "700",
          },
          "normal": Object {
            "fontSize": 14,
            "fontWeight": "700",
          },
          "small": Object {
            "fontSize": 12,
          },
        },
      },
    }
  }
>
  <View
    size={null}
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "column",
        },
        Object {
          "flex": 1,
        },
      ]
    }
    styles={
      Object {
        "base": Object {
          "flexDirection": "column",
        },
      }
    }
    theme={
      Object {
        "colors": Object {
          "layout": Object {
            "backgroundColor": "#ffffff",
          },
          "palette": Object {
            "danger": "#ff4136",
            "dark": "#484848",
            "disabled": "#999999",
            "info": "#75caeb",
            "light": "#f6f6f6",
            "primary": "#158cba",
            "success": "#28b62c",
            "warning": "#ff851b",
          },
          "social": Object {
            "facebook": "#3b5998",
            "google": "#dc4e41",
            "instagram": "#c32aa3",
            "linkedin": "#0077b5",
            "twitter": "#55acee",
            "vk": "#4c75a3",
          },
          "text": Object {
            "disabled": "#999999",
            "placeholder": "#e2e4e6",
            "primary": "#3d3d3d",
            "secondary": "#9e9e9e",
          },
        },
        "components": Object {},
        "radiuses": Object {
          "gigantic": 16,
          "huge": 12,
          "large": 8,
          "medium": 6,
          "small": 4,
          "tiny": 2,
        },
        "spacing": Object {
          "gigantic": 24,
          "huge": 20,
          "large": 16,
          "medium": 12,
          "small": 8,
          "tiny": 4,
        },
        "typography": Object {
          "fontFamily": "System",
          "fontSizes": Object {
            "large": 16,
            "medium": 14,
            "small": 12,
          },
          "fontWeights": Object {
            "bold": "900",
            "medium": "800",
            "normal": "600",
          },
          "iconSet": "MaterialIcons",
          "sizes": Object {
            "h1": Object {
              "fontSize": 31,
              "fontWeight": "900",
            },
            "h2": Object {
              "fontSize": 25,
              "fontWeight": "900",
            },
            "h3": Object {
              "fontSize": 19,
              "fontWeight": "800",
            },
            "h4": Object {
              "fontSize": 17,
              "fontWeight": "800",
            },
            "h5": Object {
              "fontSize": 16,
              "fontWeight": "800",
            },
            "h6": Object {
              "fontSize": 15,
              "fontWeight": "700",
            },
            "normal": Object {
              "fontSize": 14,
              "fontWeight": "700",
            },
            "small": Object {
              "fontSize": 12,
            },
          },
        },
      }
    }
  />
</View>
`;

exports[`Grid with Row renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "flexShrink": 1,
      },
      Object {
        "flexDirection": "column",
      },
    ]
  }
  styles={
    Object {
      "base": Object {
        "flexShrink": 1,
      },
      "directions": Object {
        "column": Object {
          "flexDirection": "column",
        },
        "row": Object {
          "flexDirection": "row",
        },
      },
    }
  }
  theme={
    Object {
      "colors": Object {
        "layout": Object {
          "backgroundColor": "#ffffff",
        },
        "palette": Object {
          "danger": "#ff4136",
          "dark": "#484848",
          "disabled": "#999999",
          "info": "#75caeb",
          "light": "#f6f6f6",
          "primary": "#158cba",
          "success": "#28b62c",
          "warning": "#ff851b",
        },
        "social": Object {
          "facebook": "#3b5998",
          "google": "#dc4e41",
          "instagram": "#c32aa3",
          "linkedin": "#0077b5",
          "twitter": "#55acee",
          "vk": "#4c75a3",
        },
        "text": Object {
          "disabled": "#999999",
          "placeholder": "#e2e4e6",
          "primary": "#3d3d3d",
          "secondary": "#9e9e9e",
        },
      },
      "components": Object {},
      "radiuses": Object {
        "gigantic": 16,
        "huge": 12,
        "large": 8,
        "medium": 6,
        "small": 4,
        "tiny": 2,
      },
      "spacing": Object {
        "gigantic": 24,
        "huge": 20,
        "large": 16,
        "medium": 12,
        "small": 8,
        "tiny": 4,
      },
      "typography": Object {
        "fontFamily": "System",
        "fontSizes": Object {
          "large": 16,
          "medium": 14,
          "small": 12,
        },
        "fontWeights": Object {
          "bold": "900",
          "medium": "800",
          "normal": "600",
        },
        "iconSet": "MaterialIcons",
        "sizes": Object {
          "h1": Object {
            "fontSize": 31,
            "fontWeight": "900",
          },
          "h2": Object {
            "fontSize": 25,
            "fontWeight": "900",
          },
          "h3": Object {
            "fontSize": 19,
            "fontWeight": "800",
          },
          "h4": Object {
            "fontSize": 17,
            "fontWeight": "800",
          },
          "h5": Object {
            "fontSize": 16,
            "fontWeight": "800",
          },
          "h6": Object {
            "fontSize": 15,
            "fontWeight": "700",
          },
          "normal": Object {
            "fontSize": 14,
            "fontWeight": "700",
          },
          "small": Object {
            "fontSize": 12,
          },
        },
      },
    }
  }
>
  <View
    size={null}
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
      ]
    }
    styles={
      Object {
        "base": Object {
          "flexDirection": "row",
        },
      }
    }
    theme={
      Object {
        "colors": Object {
          "layout": Object {
            "backgroundColor": "#ffffff",
          },
          "palette": Object {
            "danger": "#ff4136",
            "dark": "#484848",
            "disabled": "#999999",
            "info": "#75caeb",
            "light": "#f6f6f6",
            "primary": "#158cba",
            "success": "#28b62c",
            "warning": "#ff851b",
          },
          "social": Object {
            "facebook": "#3b5998",
            "google": "#dc4e41",
            "instagram": "#c32aa3",
            "linkedin": "#0077b5",
            "twitter": "#55acee",
            "vk": "#4c75a3",
          },
          "text": Object {
            "disabled": "#999999",
            "placeholder": "#e2e4e6",
            "primary": "#3d3d3d",
            "secondary": "#9e9e9e",
          },
        },
        "components": Object {},
        "radiuses": Object {
          "gigantic": 16,
          "huge": 12,
          "large": 8,
          "medium": 6,
          "small": 4,
          "tiny": 2,
        },
        "spacing": Object {
          "gigantic": 24,
          "huge": 20,
          "large": 16,
          "medium": 12,
          "small": 8,
          "tiny": 4,
        },
        "typography": Object {
          "fontFamily": "System",
          "fontSizes": Object {
            "large": 16,
            "medium": 14,
            "small": 12,
          },
          "fontWeights": Object {
            "bold": "900",
            "medium": "800",
            "normal": "600",
          },
          "iconSet": "MaterialIcons",
          "sizes": Object {
            "h1": Object {
              "fontSize": 31,
              "fontWeight": "900",
            },
            "h2": Object {
              "fontSize": 25,
              "fontWeight": "900",
            },
            "h3": Object {
              "fontSize": 19,
              "fontWeight": "800",
            },
            "h4": Object {
              "fontSize": 17,
              "fontWeight": "800",
            },
            "h5": Object {
              "fontSize": 16,
              "fontWeight": "800",
            },
            "h6": Object {
              "fontSize": 15,
              "fontWeight": "700",
            },
            "normal": Object {
              "fontSize": 14,
              "fontWeight": "700",
            },
            "small": Object {
              "fontSize": 12,
            },
          },
        },
      }
    }
  />
</View>
`;

exports[`Row renders correctly 1`] = `
<View
  size={null}
  style={
    Array [
      undefined,
      Object {
        "flexDirection": "row",
      },
      Object {
        "flex": 1,
      },
    ]
  }
  styles={
    Object {
      "base": Object {
        "flexDirection": "row",
      },
    }
  }
  theme={
    Object {
      "colors": Object {
        "layout": Object {
          "backgroundColor": "#ffffff",
        },
        "palette": Object {
          "danger": "#ff4136",
          "dark": "#484848",
          "disabled": "#999999",
          "info": "#75caeb",
          "light": "#f6f6f6",
          "primary": "#158cba",
          "success": "#28b62c",
          "warning": "#ff851b",
        },
        "social": Object {
          "facebook": "#3b5998",
          "google": "#dc4e41",
          "instagram": "#c32aa3",
          "linkedin": "#0077b5",
          "twitter": "#55acee",
          "vk": "#4c75a3",
        },
        "text": Object {
          "disabled": "#999999",
          "placeholder": "#e2e4e6",
          "primary": "#3d3d3d",
          "secondary": "#9e9e9e",
        },
      },
      "components": Object {},
      "radiuses": Object {
        "gigantic": 16,
        "huge": 12,
        "large": 8,
        "medium": 6,
        "small": 4,
        "tiny": 2,
      },
      "spacing": Object {
        "gigantic": 24,
        "huge": 20,
        "large": 16,
        "medium": 12,
        "small": 8,
        "tiny": 4,
      },
      "typography": Object {
        "fontFamily": "System",
        "fontSizes": Object {
          "large": 16,
          "medium": 14,
          "small": 12,
        },
        "fontWeights": Object {
          "bold": "900",
          "medium": "800",
          "normal": "600",
        },
        "iconSet": "MaterialIcons",
        "sizes": Object {
          "h1": Object {
            "fontSize": 31,
            "fontWeight": "900",
          },
          "h2": Object {
            "fontSize": 25,
            "fontWeight": "900",
          },
          "h3": Object {
            "fontSize": 19,
            "fontWeight": "800",
          },
          "h4": Object {
            "fontSize": 17,
            "fontWeight": "800",
          },
          "h5": Object {
            "fontSize": 16,
            "fontWeight": "800",
          },
          "h6": Object {
            "fontSize": 15,
            "fontWeight": "700",
          },
          "normal": Object {
            "fontSize": 14,
            "fontWeight": "700",
          },
          "small": Object {
            "fontSize": 12,
          },
        },
      },
    }
  }
/>
`;
